# embassy-rpc

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  Readme.md
src/: lib.rs
tests/: coverage_additional.rs  tests.rs
