[package]
name = "embassy-rpc"
version = "0.1.0"
edition = "2024"
readme = "Readme.md"
description = "no_std async request/response synchronization (Embassy-style)"

[dependencies]
embassy-sync = "0.8"

[dev-dependencies]
embassy-sync = { version = "0.8", features = ["std"] }
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
